# manipulator_codesign

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
manipulator_codesign/: arc_heatmap.py  benchmark.py  genetic_algorithm.py  genetic_algorithm_parallel.py  genetic_algorithm_parallel_vecenv.py  kinematic_chain.py  kinematic_gen_3d.py  load_objects.py  load_robot.py  moo_decoder.py  motion_planners.py  nsga2.py  nsga2_parallel.py  nsga2_ray.py  nsga2_ray_mixed_samp.py  nsga2_ray_new_samp.py  nsga2_ray_seed_mixed_samp.py  nsga2_ray_seed_mixed_samp_wandb.py  nsgaii.py  orchard_workspace.py  path_cache.py  plot_moo.py  pose_generation.py  pyb_utils.py  rrt_connect_loop.py  sort_pareto.py  training_env.py  tune_nsga2.py  urdf_gen.py  urdf_to_decision_vector.py  view_robot.py
manipulator_codesign/examples/: run_genetic_algorithm.py
manipulator_codesign/meshes/: frame_on_amiga_v2_simplified.stl
manipulator_codesign/test/: align_ee_hemisphere.py  arc_gen_test.py  load_urdf.py  more_scratch.py  parallelepiped.py  sample_orientations.py  ur5e_trajectory_controller.py
manipulator_codesign/urdf/: 6r_manipulator.urdf  example_robot.urdf  rrr_manipulator.urdf
manipulator_codesign/urdf/robots/: amiga.urdf  (+3 more)
prune_data/: all_branches_info.yaml
scripts/: align_ee_hemisphere.py  analytical_jacobian_matching.py  arc_heatmap.py  custom_rrt_connect.py  load_objects.py  load_robot.py  path_cache.py  pyb_utils.py  pybullet_test.py  reachable_arc.py  rrt_connect_loop.py  rrt_connect_manipulability.py  rrt_connect_test.py  sample_approach_points.py  simple_env.py  urdf_gen.py  urdf_mod_test.py  voxel_gen.py  voxel_search.py
scripts/test/: align_ee_hemisphere.py  align_ee_simple.py  hemisphere_mpl.py  interp_path.py  pybullet_test.py  quaternion_alignment_test_mpl.py  robotics_tool_box.py  rrt_connect_test.py  voxel_test.py
src/manipulator_codesign/: urdf_gen.py  voxel_gen.py  voxel_search.py
src/urdf/: new.urdf  prrr_manipulator_long.urdf  rrr_manipulator_no_gripper.urdf
tests/: test_planar_arm.py  test_pose_error.py  test_urdf_gen.py
urdf/: 6r_manipulator.urdf  leader_branch.urdf  prrr_manipulator.urdf  rpr_manipulator.urdf  rprr_manipulator.urdf  rrpr_manipulator.urdf  rrr_manipulator.urdf  rrrp_manipulator.urdf  simple_test_robot.urdf  three_link_manipulator.urdf  v_trellis_template.urdf
urdf/ur5e/: ur5e.urdf  ur5e_cart.urdf  ur5e_original.urdf
(+18 files in other folders)
