[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manipulator_codesign"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marcus Rosette", email = "rosettem@oregonstate.edu" },
]
maintainers = [
    { name = "Marcus Rosette", email = "rosettem@oregonstate.edu" },
]
description = "A PyBullet package for simulating a scene and controlling a robot (from URDF)."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pybullet",
    "ghalton==0.6.2",
    "pybullet_planning",
    "pyyaml",
    "matplotlib",
    "scipy",
    "open3d",
    "spatialmath-python",
    "roboticstoolbox-python",
]

[tool.hatch.envs.default.scripts]
build-ghalton = "CXXFLAGS='-std=c++11' pip install --no-cache-dir --no-binary ghalton ghalton"

[tool.hatch.envs.default]
post-install-commands = [
    "hatch run build-ghalton"
]