[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manipulator_codesign"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Marcus Rosette", email = "rosettem@oregonstate.edu" },
]
maintainers = [
    { name = "Marcus Rosette", email = "rosettem@oregonstate.edu" },
]
description = "A PyBullet package for simulating a scene and controlling a robot (from URDF)."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pybullet",
    # "pybullet_planning",
    "pyyaml",
    "matplotlib",
    "scipy",
    # "open3d",
    "spatialmath-python",
    # "roboticstoolbox-python",
    "tabulate",
]
